회원가입사용가능

--- a/src/main/resources/templates/profile/update.html
+++ b/src/main/resources/templates/profile/update.html
@@ -365,33 +365,9 @@
             });
 
 </script>
+<script>
 
-<!--<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>-->
-<!--<script>-->
-
-<!--    const search_addr_btn = document.querySelector('.search_addr_btn');-->
-<!--    search_addr_btn.addEventListener('click',function(){-->
-<!--       new daum.Postcode({-->
-<!--                oncomplete: function(data) {-->
-<!--                    console.log(data);-->
-<!--                    const zipcode = document.querySelector('.zipcode');-->
-<!--                    const addr1 = document.querySelector('.addr1');-->
-
-<!--                    if(data.userSelectedType==='R')-->
-<!--                    {-->
-<!--                        addr1.value = data.roadAddress;-->
-<!--                    }-->
-<!--                    else-->
-<!--                    {-->
-<!--                        addr1.value = data.jibunAddress;-->
-<!--                    }-->
-<!--                    zipcode.value=data.zonecode;-->
-
-<!--                }-->
-<!--            }).open();-->
-
-<!--    });-->
-<!--</script>-->
+</script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         document.getElementById('searchButton').addEventListener('click', function(event) {
@@ -522,8 +498,6 @@ const add_product_btn_el = document.querySelector('.add_product_btn');
 <script>
     const isValid = () => {
             const form = document.profileForm;
-
-
 
             alert("수정이 완료되었습니다! 🤸‍♂️");
 
