--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -211,7 +211,7 @@
                     <span for="emailInput">이메일</span>
                     <div style="display: flex;">
                         <input name="email" id="emailInput" class="form-control" style="font-size : 0.8rem;">
-                        <button class="btn btn-secondary jung-btn" onclick="checkDuplicate('emailInput')" style="width : 160px; font-size: 0.8rem; margin-left : 17px;">중복체크</button>
+                        <button class="btn btn-secondary jung-btn" id="emailbtn" onclick="checkDuplicate('emailInput')" style="width : 160px; font-size: 0.8rem; margin-left : 17px;">중복체크</button>
                     </div>
 
                     <span for="passwordInput">비밀번호</span>
@@ -298,6 +298,8 @@
                     } else {
                         alert("사용 가능한 이메일입니다.");
                         isEmailChecked = true;
+                        var emailbtn = document.getElementById('emailbtn');
+                        emailbtn.innerHTML = '사용 가능';
                     }
                 },
                 error: function (xhr, status, error) {
