--- a/src/main/resources/templates/draw.html
+++ b/src/main/resources/templates/draw.html
@@ -27,6 +27,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top : 80px;
 }
 
 
@@ -38,7 +39,6 @@ canvas{
     cursor: Crosshair;
     background-color: whitesmoke;
     border : 2px solid gray;
-    margin-left : 500px;
 }
 /* 툴모음 전체 박스 */
 .tools{
@@ -174,13 +174,6 @@ canvas{
 
 <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
 
-
-<div class="up">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-square-fill" viewBox="0 0 16 16">
-        <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm4 9h8a.5.5 0 0 0 .374-.832l-4-4.5a.5.5 0 0 0-.748 0l-4 4.5A.5.5 0 0 0 4 11z"/>
-    </svg>
-</div>
-
 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">검색</h5>
@@ -267,7 +260,7 @@ canvas{
     </div>
 </div>
 
-<mail>
+<main>
 <!-- 그림판시작 -->
 <canvas id="canvas">
 </canvas>
@@ -289,7 +282,7 @@ canvas{
     <button onclick="save()" type="button" class="button">업로드하기</button>
 </div>
 
-</mail>
+</main>
 
 
 <script>
