검색에 친구목록

--- a/src/main/resources/templates/search-contents.html
+++ b/src/main/resources/templates/search-contents.html
@@ -244,8 +244,29 @@
 
 
         </div>
-        <div class="fallow">
-            <h6>친구목록</h6>
+
+        <div class="followlist" style="width : 500px;
+        margin-left : 150px;
+        margin-top : 50px;">
+            <!--            내정보-->
+            <div class="myInfo" style="height : 60px;margin-top : 15px;">
+                <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:40px;height:40px;border-radius:50%;margin-left : 10px;margin-right : 10px;" />
+                <span th:text="${#authentication.getPrincipal().getUser().getEmail()}">my email</span>
+            </div>
+
+            <!--            친구정보-->
+            <div class="Flist" style="padding-top : 20px;border-top : 1px solid rgb(194, 194, 194); max-height: 340px; overflow-y: auto;border : 1px solid rgb(192, 192, 192);border-radius : 15px;">
+                <!-- followList가 리스트일 경우 각 항목을 순회하며 표시 -->
+                <div th:each="follow : ${followList}" style="height : 60px; margin-bottom : 10px;margin-left : 20px;">
+                    <a th:href="'/nampage/' + ${follow.email}" style="text-decoration: none; color : black;">
+
+                        <!-- follower 객체에서 필요한 속성을 가져와서 표시 -->
+                        <img th:src="${follow.profile}" style="width:40px;height:40px;border-radius:50%;margin-top : 10px;margin-bottom:10px; margin-right : 20px;" />
+
+                        <span th:text="${follow.nickname}">nam email</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
