--- a/src/main/resources/templates/draw.html
+++ b/src/main/resources/templates/draw.html
@@ -278,7 +278,7 @@ canvas{
     <!-- 되돌리기, 지우기, 다운로드 버튼  -->
     <button onclick="undo_last()" type="button" class="button">되돌리기</button>
     <button onclick="clear_canvas()" type="button" class="button">지우기</button>
-    <button onclick="save()" type="button" class="button">업로드하기</button>
+    <button onclick="save()" type="button" class="button">저장하기</button>
 </div>
 
 </main>
