--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -264,7 +264,7 @@
                                 <img th:src="${data.profile}" style="width:30px;height:30px;border-radius:50%;margin-right : 10px;" />
                                 <div id = board_id th:text="${data.board.nickname}">id</div>
                             </a>|
-                            <div class="date" th:text="${data.board.date}">date</div>
+                            <div class="date" th:text="${#temporals.format(data.board.date, 'yyyy년 MM월 dd일 HH:mm:ss')}">date</div>
                         </div>
                         <div class="hits-box">조회
                             <div class="hits" th:text="${data.board.hits}">hits</div>
@@ -330,7 +330,12 @@
 
 <!-- 자체 작성한 JavaScript 코드 -->
 <script>
-    // 서버에서 알림 데이터를 가져와 동적으로 렌더링하는 함수
+    function formatDateTime(rawDate) {
+        const formattedDate = moment(rawDate, 'YYYY-MM-DDTHH:mm:ss').format('YYYY년 MM월 DD일 HH:mm:ss');
+        return formattedDate;
+    }
+
+   // 서버에서 알림 데이터를 가져와 동적으로 렌더링하는 함수
     function loadNotifications() {
         $.ajax({
             url: "/boardnotification/read", // 알림 데이터를 제공하는 엔드포인트
@@ -344,9 +349,10 @@
                     // 알림을 동적으로 생성하여 추가합니다.
                     const notificationElement = `
                         <div class="notification">
+                            <i class="fas fa-bell"></i>
                             <p>${notification.replynickname}</p>
                             <p>${notification.message}</p>
-                            <p>${notification.rdate}</p>
+                            <p>${formatDateTime(notification.rdate)}</p>
                         </div>
                     `;
                     notificationContainer.append(notificationElement);
