--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -328,6 +328,12 @@
 
 </body>
 
+<!-- Moment.js -->
+<script src="https://momentjs.com/downloads/moment.js"></script>
+<!-- Font Awesome for the bell icon -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha384-oC5D5N2ZlHv5r5zI3/81s6V5HQHZxTUn1l7/2eXIt2Q01lQQDKqOvSDR8RShm6ZH" crossorigin="anonymous">
+
+
 <!-- 자체 작성한 JavaScript 코드 -->
 <script>
     function formatDateTime(rawDate) {
