--- a/src/main/resources/templates/profile/update.html
+++ b/src/main/resources/templates/profile/update.html
@@ -268,7 +268,7 @@
             <br/>
             <br/>
             <span for="emailInput" style="margin-right : 18px;">비밀번호</span>
-            <a href="/leave">비밀번호 변경하기</a>
+            <a href="/emailcheck">비밀번호 변경하기</a>
             <br/>
             <br/>
             <span for="nicknameInput">사용할 닉네임</span>
