스크롤버튼

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -487,13 +487,31 @@
 </script>
 
 <script>
-    // .up 엘리먼트를 클릭하면 페이지 상단으로 스크롤
+    // .up 클릭하면 페이지 상단으로 스크롤
     document.querySelector(".up").addEventListener("click", function() {
         window.scrollTo({
             top: 0,
-            behavior: "smooth" // 부드러운 스크롤 사용
+            behavior: "smooth"
         });
     });
+
+        window.addEventListener("scroll", function() {
+            var scrollPosition = window.scrollY;
+
+            if (scrollPosition > 500) {
+                document.querySelector(".up").style.display = "block";
+            } else {
+                document.querySelector(".up").style.display = "none";
+            }
+        });
+
+        window.addEventListener("load", function() {
+            var scrollPosition = window.scrollY;
+
+            if (scrollPosition > 500) {
+                document.querySelector(".up").style.display = "block";
+            }
+        });
 </script>
 
 <!-- axios -->
