--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -35,8 +35,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border-top: 1px solid #ccc; /* 위쪽에만 줄 추가 */
-    border-bottom: 1px solid #ccc; /* 아래쪽에만 줄 추가 */
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
     margin-bottom: 10px;
     padding: 10px;
 }
@@ -49,6 +49,7 @@
     flex: 1;
     margin-right: 10px;
     font-weight: bold;
+    width : 50px;
 }
 
 .notification .message {
@@ -103,7 +104,7 @@
                         <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
                     </svg>알림
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                        <span class="visually-hidden">unread messages</span>
+                        <span class="visually-hidden">messages</span>
                     </span>
                 </button>
 
@@ -357,7 +358,9 @@
                         <div class="notification">
                             <i class="fas fa-bell"></i>
                             <p>${notification.replynickname}</p>
-                            <p>${notification.message}</p>
+                            <a href="/read/${notification.bid}">
+                                <p>${notification.message}</p>
+                            </a>
                             <p>${formatDateTime(notification.rdate)}</p>
                         </div>
                     `;
@@ -557,7 +560,6 @@ uploadBox_el.addEventListener('drop',function(e){
             alert("이미지 파일만 가능합니다");
             return;
     }
-    //총이미지의 개수가 5개 이상이면 return(아직..)
 
     //미리보기
     const file = e.dataTransfer.files[0];
