--- a/src/main/resources/templates/draw.html
+++ b/src/main/resources/templates/draw.html
@@ -310,7 +310,9 @@ canvas{
                         <div class="notification">
                             <i class="fas fa-bell"></i>
                             <p>${notification.replynickname}</p>
-                            <p>${notification.message}</p>
+                            <a href="/read/${notification.bid}">
+                                <p>${notification.message}</p>
+                            </a>
                             <p>${formatDateTime(notification.rdate)}</p>
                         </div>
                     `;
