--- a/src/main/resources/templates/draw.html
+++ b/src/main/resources/templates/draw.html
@@ -22,70 +22,111 @@
     margin: 0;
     padding: 0;
     outline: 0;
-}
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    }
+
+    main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
 
 
-/* 캔버스 설정 */
-canvas{
+    /* 캔버스 설정 */
+    canvas{
 
-    margin-top: 20px;
-    cursor: Crosshair;
-    background-color: white;
-    border : 1px solid gray;
-}
-/* 툴모음 전체 박스 */
-.tools{
-    max-width: 1000px;
-    margin: 0 auto;
-    margin-top:30px;
-    display: flex;
-    justify-content:center;
-    flex-direction: row;
-}
+        margin-top: 20px;
+        cursor: Crosshair;
+        background-color: white;
+        border : 1px solid gray;
+    }
+    /* 툴모음 전체 박스 */
+    .tools{
+        max-width: 1000px;
+        margin: 0 auto;
+        margin-top:30px;
+        display: flex;
+        justify-content:center;
+        flex-direction: row;
+    }
 
-/* 툴 컬러 버튼 */
-.tools .color-field{
-    height:40px;
-    width: 40px;
-    min-height:40px;
-    min-width: 40px;
-    cursor:pointer;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing:border-box;
-    border: 2px solid white;
-    align-self:center;
-}
+    /* 툴 컬러 버튼 */
+    .tools .color-field{
+        height:40px;
+        width: 40px;
+        min-height:40px;
+        min-width: 40px;
+        cursor:pointer;
+        border-radius: 50%;
+        display: inline-block;
+        box-sizing:border-box;
+        border: 2px solid white;
+        align-self:center;
+    }
 
-/* 되돌리기,지우기,다운로드 버튼 */
-.tools .button{
-    align-self: center;
-    width:100px;
-    height:40px;
-    border: 2px solid white;
-    cursor :pointer;
-    color: white;
-    background:#222;
-    font-weight: bold;
-    margin:0 6px;
-}
-/* 컬러피커 */
-.color-picker{
-    align-self: center;
-    margin:0 10px;
-    height:50px;
-}
-/* 펜크기 */
-.pen-range{
-    align-self: center;
-    margin:0 10px;
-}
+    /* 되돌리기,지우기,다운로드 버튼 */
+    .tools .button{
+        align-self: center;
+        width:100px;
+        height:40px;
+        border: 2px solid white;
+        cursor :pointer;
+        color: white;
+        background:#222;
+        font-weight: bold;
+        margin:0 6px;
+    }
+    /* 컬러피커 */
+    .color-picker{
+        align-self: center;
+        margin:0 10px;
+        height:50px;
+    }
+    /* 펜크기 */
+    .pen-range{
+        align-self: center;
+        margin:0 10px;
+    }
+
+    .notification {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            border-top: 1px solid #ccc;
+            border-bottom: 1px solid #ccc;
+            margin-bottom: 10px;
+            padding: 10px;
+        }
+
+        .notification p {
+            margin: 0;
+        }
+
+        .notification .email {
+            flex: 1;
+            margin-right: 10px;
+            font-weight: bold;
+            width : 50px;
+        }
+
+        .notification .message {
+            flex: 2;
+            margin-right: 10px;
+        }
+
+        .notification .date {
+            flex: 1;
+        }
+
+        .notification>a{
+            color : black;
+            text-decoration: none;
+        }
+
+        .notification>a:hover{
+            color : blue;
+            text-decoration: underline;
+        }
 </style>
 
 <body>
@@ -573,6 +614,29 @@ function save(){
         a.remove();
     });
 }
+</script>
+
+<script>
+    //---------------------------------
+    //소켓 연결
+    //---------------------------------
+    var socket = new WebSocket('ws://localhost:8080/socket');
+
+    //---------------------------------
+    //메세지 수신
+    //---------------------------------
+    let amarmtest = 0;
+    socket.onmessage = function(event) {
+            var message = event.data;
+            console.log('message : ',message);
+            alert("Message : "+message);
+
+            const notificationSpan = document.querySelector('.notification .counter');
+            if (notificationSpan) {
+              notificationSpan.style.display = 'block';
+            }
+   };
+
 </script>
 </body>
 </html>
