--- a/src/main/resources/templates/search-nickname.html
+++ b/src/main/resources/templates/search-nickname.html
@@ -30,30 +30,70 @@
     }
 
 
-.user{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height : 160px;
-    width : 600px;
-    border-bottom : 1px solid rgb(208, 208, 208);
-    padding : 20px;
-    padding-left : 50px;
-    padding-bottom : 50px;
-    margin-bottom : 50px;
-}
-.name{
-    width : 280px;
-    display: flex;
-    flex-direction: column;
-    margin-right : 20px;
-    justify-content: center;
-}
-.nickname{
-}
-.email{
-    color : gray;
-}
+    .user{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height : 160px;
+        width : 600px;
+        border-bottom : 1px solid rgb(208, 208, 208);
+        padding : 20px;
+        padding-left : 50px;
+        padding-bottom : 50px;
+        margin-bottom : 50px;
+    }
+    .name{
+        width : 280px;
+        display: flex;
+        flex-direction: column;
+        margin-right : 20px;
+        justify-content: center;
+    }
+    .nickname{
+    }
+    .email{
+        color : gray;
+    }
+
+    .notification {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            border-top: 1px solid #ccc;
+            border-bottom: 1px solid #ccc;
+            margin-bottom: 10px;
+            padding: 10px;
+        }
+
+        .notification p {
+            margin: 0;
+        }
+
+        .notification .email {
+            flex: 1;
+            margin-right: 10px;
+            font-weight: bold;
+            width : 50px;
+        }
+
+        .notification .message {
+            flex: 2;
+            margin-right: 10px;
+        }
+
+        .notification .date {
+            flex: 1;
+        }
+
+        .notification>a{
+            color : black;
+            text-decoration: none;
+        }
+
+        .notification>a:hover{
+            color : blue;
+            text-decoration: underline;
+        }
 
 
 
@@ -597,6 +637,29 @@ const add_product_btn_el = document.querySelector('.add_product_btn');
 
 
       })
+</script>
+
+<script>
+  //---------------------------------
+  //소켓 연결
+  //---------------------------------
+  var socket = new WebSocket('ws://localhost:8080/socket');
+
+  //---------------------------------
+  //메세지 수신
+  //---------------------------------
+  let amarmtest = 0;
+  socket.onmessage = function(event) {
+          var message = event.data;
+          console.log('message : ',message);
+          alert("Message : "+message);
+
+          const notificationSpan = document.querySelector('.notification .counter');
+          if (notificationSpan) {
+            notificationSpan.style.display = 'block';
+          }
+ };
+
 </script>
 
 </body>
