--- a/src/main/resources/templates/profile/update.html
+++ b/src/main/resources/templates/profile/update.html
@@ -13,6 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
     <!-- 구글폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -363,49 +365,7 @@
 <!-- Font Awesome for the bell icon -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha384-oC5D5N2ZlHv5r5zI3/81s6V5HQHZxTUn1l7/2eXIt2Q01lQQDKqOvSDR8RShm6ZH" crossorigin="anonymous">
 
-
-<script>
-    function formatDateTime(rawDate) {
-        const formattedDate = moment(rawDate, 'YYYY-MM-DDTHH:mm:ss').format('YYYY년 MM월 DD일 HH:mm:ss');
-        return formattedDate;
-    }
-
-    // 서버에서 알림 데이터를 가져와 동적으로 렌더링하는 함수
-    function loadNotifications() {
-        $.ajax({
-            url: "/boardnotification/read", // 알림 데이터를 제공하는 엔드포인트
-            method: "GET",
-            dataType: "json",
-            success: function(data) {
-                // 알림 데이터를 동적으로 렌더링합니다.
-                const notificationContainer = $("#notification-container");
-
-                data.forEach(function(notification) {
-                    // 알림을 동적으로 생성하여 추가합니다.
-                    const notificationElement = `
-                        <div class="notification">
-                            <i class="fas fa-bell"></i>
-                            <p>${notification.replynickname}</p>
-                            <a href="/read/${notification.bid}">
-                                <p>${notification.message}</p>
-                            </a>
-                            <p>${formatDateTime(notification.rdate)}</p>
-                        </div>
-                    `;
-                    notificationContainer.append(notificationElement);
-                });
-            },
-            error: function(error) {
-                console.error("Error fetching notifications: " + error);
-            }
-        });
-    }
-
-    // 페이지가 로드될 때 알림을 가져와서 렌더링합니다.
-    $(document).ready(function() {
-        loadNotifications();
-    });
-</script>
+<script src="/js/notification.js"></script>
 
 <script>
     let isNicknameChecked = false;
@@ -462,9 +422,7 @@
             });
 
 </script>
-<script>
 
-</script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         document.getElementById('searchButton').addEventListener('click', function(event) {
@@ -499,22 +457,6 @@
             });
 
 </script>
-
-<!--<script>-->
-<!--    const profileForm = document.getElementById('profileForm');-->
-
-<!--    const jechulButton = document.querySelector('.jechul');-->
-
-<!--    jechulButton.addEventListener('click', function (event) {-->
-<!--        const formData = new FormData(profileForm);-->
-
-<!--        axios.post('/profile/update', formData, { headers: { 'Content-Type': 'multipart/form-data' } })-->
-<!--            .then(response=>{-->
-<!--            alert("수정이 완료되었습니다.");-->
-<!--                location.reload();-->
-<!--            })-->
-<!--    });-->
-<!--</script>-->
 
 
 <script>
@@ -608,28 +550,6 @@ location.reload();
         }
 </script>
 
-<script>
-    //---------------------------------
-    //소켓 연결
-    //---------------------------------
-    var socket = new WebSocket('ws://localhost:8080/socket');
-
-    //---------------------------------
-    //메세지 수신
-    //---------------------------------
-    let amarmtest = 0;
-    socket.onmessage = function(event) {
-            var message = event.data;
-            console.log('message : ',message);
-            alert("Message : "+message);
-
-            const notificationSpan = document.querySelector('.notification .counter');
-            if (notificationSpan) {
-              notificationSpan.style.display = 'block';
-            }
-   };
-
-</script>
 
 </body>
 </html>
