알림다듬기

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -43,11 +43,16 @@
         }
 
         .notification>.nickname{
-
+            font-size : 0.85rem;
+            font-weight: 700;
+        }
+        .notification>.nickname>span{
+            font-size : 0.85rem;
+            font-weight:500;
         }
 
         .notification>.date{
-            font-size : 0.5rem;
+            font-size : 0.7rem;
             color : gray;
         }
 
@@ -336,8 +341,70 @@
 <!-- axios -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<script src="/js/notification.js"></script>
+<!--<script src="/js/notification.js"></script>-->
 
+<script>
+    function formatDateTime(rawDate) {
+        const formattedDate = moment(rawDate, 'YYYY-MM-DDTHH:mm:ss').format('YYYY.MM.DD HH:mm');
+        return formattedDate;
+    }
+
+   // 서버에서 알림 데이터를 가져와 동적으로 렌더링하는 함수
+    function loadNotifications() {
+        $.ajax({
+            url: "/boardnotification/read", // 알림 데이터를 제공하는 엔드포인트
+            method: "GET",
+            dataType: "json",
+            success: function(data) {
+                // 알림 데이터를 동적으로 렌더링합니다.
+                const notificationContainer = $("#notification-container");
+
+                data.forEach(function(notification) {
+                    // 알림을 동적으로 생성하여 추가합니다.
+                    const notificationElement = `
+                        <div class="notification">
+                            <i class="fas fa-bell"></i>
+                            <div class="nickname">${notification.replynickname}<span>님이 댓글을 남겼습니다.</span></div>
+                            <a href="/read/${notification.bid}">
+                                <div>${notification.message}</div>
+                            </a>
+                            <div class="date">${formatDateTime(notification.rdate)}</div>
+                        </div>
+                    `;
+                    notificationContainer.append(notificationElement);
+                });
+            },
+            error: function(error) {
+                console.error("Error fetching notifications: " + error);
+            }
+        });
+    }
+
+    // 페이지가 로드될 때 알림을 가져와서 렌더링합니다.
+    $(document).ready(function() {
+        loadNotifications();
+    });
+
+    //---------------------------------
+        //소켓 연결
+        //---------------------------------
+        var socket = new WebSocket('ws://localhost:8080/socket');
+
+        //---------------------------------
+        //메세지 수신
+        //---------------------------------
+        let amarmtest = 0;
+        socket.onmessage = function(event) {
+                var message = event.data;
+                console.log('message : ',message);
+                alert("Message : "+message);
+
+                const notificationSpan = document.querySelector('.notification .counter');
+                if (notificationSpan) {
+                  notificationSpan.style.display = 'block';
+                }
+       };
+</script>
 <script>
 
     function logoutAndRedirect() {
